--- a/frontend/src/Pages/OrdersItemDetailPage/OrdersItemDetailPage.css
+++ b/frontend/src/Pages/OrdersItemDetailPage/OrdersItemDetailPage.css
@@ -20,14 +20,9 @@
   padding: 20px;
 }
 
-.step-wizard {
-  width: 100px;
-  height: 100%;
-}
-
 .orders-devider {
-  border-right: 2px solid rgb(230, 230, 230);
-  margin: 20px;
+  border-right: 2px solid rgb(224, 224, 224);
+  margin: 10px 40px 20px 100px;
 }
 
 .view-orders-product-detail-content-section {
@@ -54,7 +49,6 @@
 .purshased-item-image {
   width: 180px;
   margin-right: 20px;
-
 }
 
 .purchased-item-action {
@@ -67,109 +61,28 @@
   width: 150px;
   height: 40px;
 }
-
-.step-wizard-list {
-  list-style: none;
-  position: relative;
-  z-index: 10;
-}
-.step-wizard-item {
-  position: relative;
-  font-size: 11px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-.step-wizard-item + .step-wizard-item::after {
-  content: "";
-  position: absolute;
-  left: -18px;
-  top: -18px;
-  background: rgb(138, 214, 255);
-  z-index: -10;
-  width: 3px;
-  height: 110%;
-}
-
-.progress-count {
-  width: 20px;
-  height: 20px;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  position: relative;
-  z-index: 10;
-  color: transparent;
-}
-
-.progress-count::after {
-  content: "";
-  height: 15px;
-  width: 15px;
-  background: rgb(32, 177, 255);
-  position: absolute;
-  border-radius: 100%;
-  top: 10px;
-  left: -24px;
-  box-shadow: 0px 0px 3px 4px rgba(183, 228, 255, 0.922);
-  margin: 10px 0;
-}
-
-.progress-count-pending::after {
-  content: "";
-  text-align: center;
-  color: white;
-  height: 15px;
-  width: 15px;
-  background: rgb(255, 80, 80);
-  position: absolute;
-  border-radius: 100%;
-  top: 5px;
-  left: -24px;
-  box-shadow: 0px 0px 3px 4px rgba(255, 181, 181, 0.922);
-  margin: 10px 0;
-}
-.progress-count::before {
-  content: "";
-  height: 10px;
-  width: 10px;
-  left: 200px;
-}
-
-.current-item ~ .step-wizard-item .progress-count::after {
-  width: 10px;
-  height: 10px;
-  background-color: rgb(210, 206, 206);
-  box-shadow: none;
-  left: -22px;
-}
-
-.current-item ~ .step-wizard-item .progress-label {
-  opacity: 0.5;
-}
-
-.current-item ~ .step-wizard-item::after {
-  background: rgb(234, 235, 236);
+.buy-again-btn{
+  
 }
 
 
-
-.add-review,.add-review form{
+.add-review,
+.add-review form {
   display: flex;
   flex-direction: column;
 }
-input[type="radio"]{
+input[type="radio"] {
   display: none;
 }
-.order-rating-star{
+.order-rating-star {
   color: rgb(201, 199, 199);
   margin-right: 10px;
 }
-.review-btn{
+.review-btn {
   height: 40px;
 }
 
-.total-review{
+.total-review {
   font-size: 12px;
   margin-left: 10px;
   color: grey;
@@ -189,8 +102,8 @@ input[type="radio"]{
 }
 
 @media (max-width: 500px) {
- .view-orders-item-details-container {
-     flex-wrap: wrap;
+  .view-orders-item-details-container {
+    flex-wrap: wrap;
   }
   .orders-devider {
     width: 100%;
@@ -198,76 +111,7 @@ input[type="radio"]{
     border: none;
   }
 
-
-
-
-  .step-wizard-list{
-      display: flex;
-  }
-
-
-  .step-wizard-item {
-    position: relative;
-    font-size: 11px;
+  .step-wizard-list {
     display: flex;
   }
-  .step-wizard-item + .step-wizard-item::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0px;
-    width: 100%;
-    height: 2px;
-  }
-  
-  .progress-count {
-    width: 20px;
-    height: 20px;
-    display: block;
-    align-items: center;
-    justify-content: space-around;
-  }
-  
-  .progress-count::after {
-    content: "";
-    height: 15px;
-    width: 15px;
-    background: rgb(32, 177, 255);
-    position: absolute;
-    border-radius: 100%;
-    top: 10px;
-    left: -24px;
-    margin: 10px 0;
-  }
-  .progress-count-pending::after {
-    content: "";
-    text-align: center;
-    color: white;
-    height: 15px;
-    width: 15px;
-    background: rgb(255, 80, 80);
-    position: absolute;
-    border-radius: 100%;
-    top: 5px;
-    left: -24px;
-    box-shadow: 0px 0px 3px 4px rgba(255, 181, 181, 0.922);
-    margin: 10px 0;
-  }
-  .progress-count::before {
-    content: "";
-    height: 10px;
-    width: 10px;
-    left: 20px;
-  }
-  
-  .current-item ~ .step-wizard-item .progress-count::after {
-    width: 10px;
-    height: 10px;
-    background-color: rgb(210, 206, 206);
-    box-shadow: none;
-    left: -22px;
-  }
-  
-
-
 }
